# bluetooth_telemetry

./: .gitignore  README.md  bt-client  bt-client.c  bt-init.sh  note.txt  rfcomm_server.c  rfcomm_server_v2.c
GUI/: BluetoothTelemetryGUI.pro  CMakeLists.txt  DESIGN_REFERENCE.md  MODERNIZATION_NOTES.md  README.md  main.cpp  mainwindow.cpp  mainwindow.h
data/: IoVUser-1.txt
